Upgrade pygit2 to 1.16 and fix bugs, test pass on macos 15

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,14 @@ data_files =
 [options]
 packages =
     git_deps
+    git_deps/listener
+python_requires = >=3.6
+
+[options.package_data]
+git_deps =
+    html/css/*
+    html/js/*.js
+    html/*.html
 
 [options.entry_points]
 console_scripts =
